--- a/src/app.module.css
+++ b/src/app.module.css
@@ -66,12 +66,9 @@
     }
 
     .homeContainer .tasksCount {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-
         margin-top: 3.5rem;
         padding-bottom: 0;
+        padding: 0 10px;
     }
 
     .homeContainer .tasksCount span:nth-child(1n) {
