--- a/src/components/inputCreateTask.module.css
+++ b/src/components/inputCreateTask.module.css
@@ -52,6 +52,7 @@
     .formCreateTask input {
         padding: 5px 10px;
         font-size: 1.3rem;
+        touch-action: none;
     }
 
     .formCreateTask button {
